# pepper

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: citation-manager.md  copyeditor.md  empirics-writer.md  intro-writer.md  latex-assembler.md  literature-reviewer.md  paper-outliner.md  peer-reviewer.md  revision-planner.md  technical-writer.md  venue-formatter.md
.claude/commands/: assemble.md  camera-ready.md  create-journal-version.md  draft-paper.md  draft-section.md  edit-section.md  import-paper.md  literature-search.md  new-paper.md  polish.md  review-paper.md  revise-paper.md  set-target.md
.paperwriter/scripts/: install.sh  validate.sh
.paperwriter/templates/informs/: main.tex  template-manifest.yaml
.pepper/: config.yaml  shared-agent-protocols.md  writing-style.md
.pepper/adapters/codex/roles/: citation-manager.md  copyeditor.md  empirics-writer.md  intro-writer.md  latex-assembler.md  literature-reviewer.md  paper-outliner.md  (+4 more)
.pepper/scripts/: install.sh  validate.sh
.pepper/templates/econometrica/: template-manifest.yaml
.pepper/templates/iclr/: main.tex  template-manifest.yaml
.pepper/templates/icml/: main.tex  template-manifest.yaml
.pepper/templates/informs/: main.tex  template-manifest.yaml
.pepper/templates/neurips/: main.tex  template-manifest.yaml
claude/agents/: empirics-writer.md  literature-reviewer.md  paper-outliner.md  technical-writer.md  venue-formatter.md
claude/commands/: camera-ready.md  new-paper.md
docs/: project-local-agentic-writer-plan.md  refactor.md
literature/: agentic-ai-sandboxing-survey.md  alternative-data-fund-survey.md  autoencoders-finance-survey.md  deep-factor-models-survey.md  portfolio-factor-construction-survey.md  references-master.bib
papers/ask-factors/: main.blg  main.out  main.tex  neurips_2025.sty  references.bib
papers/ask-factors/sections/: abstract.tex  appendix_experiments.tex  conclusion.tex  experiments.tex  methodology.tex  related_work.tex
papers/ask-factors/workspace/: citation-report.md  current-paper.md  paper-outline.md
scripts/: pepper
src/pepper/: __init__.py  assembly.py  cli.py  core_specs.py  importer.py  manifest.py  project.py  renderers.py  sync.py  validate.py  workspace.py
src/pepper/assets/: CLAUDE.template.md
templates/econometrica/: main.tex
tests/: test_core_specs.py  test_freshness.py  test_renderers.py  test_sync.py
(+42 files in other folders)
